--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: "Poppins", sans-serif;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    background: rgb(34, 193, 195);
+    background: linear-gradient(
+        32deg,
+        rgba(34, 193, 195, 1) 10%,
+        rgba(253, 187, 45, 1) 92%
+    );
+}
+
+.wrapper {
+    margin: auto;
+    background-color: black;
+    width: 80%;
+    height: 100vh;
+    background: #f5f7fb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.title {
+    font-size: 3rem;
+    margin: 20px auto;
+    color: #8e49e8;
+}
+.text {
+    font-size: 1.1rem;
+    margin: 0 auto;
+}
+
+.selection {
+    margin: 10px auto;
+
+    width: 300px;
+    font-size: 1.1rem;
+}
+
+.btn {
+    margin: 20px auto;
+    width: 100px;
+    height: 40px;
+    border: none;
+    outline: none;
+    background: #8e49e8;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 3px;
+    padding: 6px 10px;
+    opacity: 0.95;
+}
+
+button:hover {
+    opacity: 1;
+}
+
+/* quizpage*/
+.option {
+    background-color: #8e49e8;
+    margin: 20px;
 }
