--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,22 @@ button:hover {
     background-color: #8e49e8;
     margin: 20px;
 }
+
+.answer-btn {
+    margin: 0 10px;
+}
+
+.chosen {
+    background-color: #8e49e8;
+}
+
+.wrong {
+    background-color: red;
+}
+
+.correct {
+    background-color: green;
+}
+.wrong-chosen {
+    background-color: rgb(220, 31, 91);
+}
