--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,30 @@ button:hover {
     opacity: 1;
 }
 
+.icons {
+    height: 100px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
+}
+
+.right {
+    margin-right: 20px;
+}
+
+a {
+    height: 46px;
+    width: 46px;
+}
+i {
+    margin-top: 0;
+    color: black;
+    height: 100%;
+}
+
 /* quizpage*/
 .wrapper {
     margin: auto;
